feat: 引継ぎ計画書の作成
混乱していた開発AIでの開発を中断し、新たに別のAIに開発を引き継ぐための計画書

- 前提で状況整理、分析、対策を検討
- 関係者で今回から参加するAIの役割を明確化
- 今後の流れ予測で詳細な手順を検討

--- a/docs/引継ぎ計画書（バージョン1.0）.md
+++ b/docs/引継ぎ計画書（バージョン1.0）.md
@@ -1,78 +1,140 @@
-##前提
+\##前提  
+
 開発AIが混乱し始めてアドバイスの信頼性が落ちたため、別AIをたててプロジェクトを引継ぐための計画
 
-- 症状：
-症状は様々だが、通常でも起きることもあるので確証はないものの、極端な記憶喪失、参照ファイル間違いやコードの書き間違いなどのケアレスミスが増えた気がする
-特に記憶喪失はプロジェクトの正常進行に極端な障害となってきた
-- 原因：
-今回のプロジェクトは、QA主導でプロジェクト全体を進行する事を目的としていたが、開発工程については知見がないまま始めたため、開発プロセスをほとんどAI任せにしていた。
+
+
+症状：  
+
+症状は様々だが、通常でも起きることもあるので確証はないものの、極端な記憶喪失、参照ファイル間違いやコードの書き間違いなどのケアレスミスが増えた気がする 特に記憶喪失はプロジェクトの正常進行に極端な障害となってきた
+
+
+
+原因：  
+
+今回のプロジェクトは、QA主導でプロジェクト全体を進行する事を目的としていたが、開発工程については知見がないまま始めたため、開発プロセスをほとんどAI任せにしていた。  
+
 その中でも特に考えられるのは、マルチタスク（全体的な計画→機能の設計→コーディング→エラー対応→機能実装が終わるとGithubプッシュのサポート→全体的な計画…の順を繰り返し）と、エラー対応で数万文字単位の大量のエラーコードを何度も見せるため、他の記憶が消されてる（エラー関連情報で上書きされる？）などか
-- 対策：
+
+
+
+対策：  
+
 まずはマルチタスクとエラー対応のふたつを解消するために、AIを複数用意し、チーム制の導入を計画
-- この引継ぎ計画書の意義：
+
+
+
+この引継ぎ計画書の意義：  
+
 まだAIがどこで壊れるか明確になっていないため、今後も同様の事が起きることを前提にして、どこでどのAIがいなくなっても正常に引き継げるように、今後トライアンドエラーを繰り返しながらブラッシュアップして、引継ぎ計画書によって常に開発プロセス全体をハンドリングし続けられる状況を作り出す
 
-##関係者
-- 私：QM、PM、各AI間の仲介役、提示されたコードの実装
-- 設計AI：開発計画書と、要件定義書を基にした全体設計書、更に、機能毎の詳細設計を作成し、コーディングAIが書いたコードのレビュー、エラーサポートAIが提案する修正案のレビューを担当する
-　レビュー観点：設計との乖離がないか、整合性が取れているか、拡張性・保守性の観点からのレビュー
-　候補AI：ChatGPT (GPT-3.5など無料版)、Google Gemini (無料版)、Perplexity AI など
-- コーディングAI：詳細設計を基にコードを書いて、実装前のレビューや、実装後にエラーが出たらエラーサポートAIが出した修正案のレビュー、修正方針が決まったら方針に沿った修正を担当する
-　レビュー観点：詳細設計との一致、可読性・保守性、基本的なエラーハンドリング（予期せぬnil参照など）が適切に実装されているかの観点からレビュー
-　候補AI：ChatGPT (無料版)、Google Gemini (無料版)、Claude (無料版) など
-- エラーサポートAI：コードを実装してエラーがでた時修正案を出す。修正案がうまくいかない時は引き続き相談相手になる。プロジェクトが長く続くと多分壊れる
-　レビュー観点：コードの書き方自体に依存関係などの潜在的なエラーの種がないかの予測、よくあるバグパターンを避けているか、予期せぬエラー発生時のリカバリが考慮されているかなどの観点からのレビューと、実装してエラーが出た場合、コーディングAIに伝えるエラーの要点のまとめと、修正アドバイスを担当
-　候補AI：ChatGPT (無料版)、Google Gemini (無料版)、Claude (無料版) など
-- ドキュメンテーションサポートAI：Githubでのコミットメッセージやプルリクエストの記述をサポートするAI
-　候補AI：ChatGPT (無料版 GPT-3.5)、Google Gemini (無料版)、Claude (無料版)
-- QAサポートAI（既にいる）：JSTQB ALTM学習のサポートと、実践の中での使用例などの相談役
 
-##今後の流れ予測
-▽始めに
-多分最初は順番が大事
-理由は、まとめて全部渡すと、その中の一部しか見てくれない可能性がある
+
+\##関係者
+
+私：QM、PM、各AI間の仲介役、提示されたコードの実装
+
+設計AI：開発計画書と、要件定義書を基にした全体設計書、更に、機能毎の詳細設計を作成し、コーディングAIが書いたコードのレビュー、エラーサポートAIが提案する修正案のレビューを担当する  
+
+　レビュー観点：設計との乖離がないか、整合性が取れているか、拡張性・保守性の観点からのレビュー  
+
+　候補AI：ChatGPT (GPT-3.5など無料版)、Google Gemini (無料版)、Perplexity AI など
+
+コーディングAI：詳細設計を基にコードを書いて、実装前のレビューや、実装後にエラーが出たらエラーサポートAIが出した修正案のレビュー、修正方針が決まったら方針に沿った修正を担当する  
+
+　レビュー観点：詳細設計との一致、可読性・保守性、基本的なエラーハンドリング（予期せぬnil参照など）が適切に実装されているかの観点からレビュー  
+
+　候補AI：ChatGPT (無料版)、Google Gemini (無料版)、Claude (無料版) など
+
+エラーサポートAI：コード実装前と、コードを実装してエラーがでた時修正案を出す。修正案がうまくいかない時は引き続き相談相手になる。プロジェクトが長く続くと多分壊れる  
+
+　レビュー観点：コードの書き方自体に依存関係などの潜在的なエラーの種がないかの予測、よくあるバグパターンを避けているか、予期せぬエラー発生時のリカバリが考慮されているかなどの観点からのレビューと、実装してエラーが出た場合、コーディングAIに伝えるエラーの要点のまとめと、修正アドバイスを担当  　候補AI：ChatGPT (無料版)、Google Gemini (無料版)、Claude (無料版) など
+
+ドキュメンテーションサポートAI：Githubでのコミットメッセージやプルリクエストの記述をサポートするAI  
+
+　候補AI：ChatGPT (無料版 GPT-3.5)、Google Gemini (無料版)、Claude (無料版)
+
+QAサポートAI（既にいる）：JSTQB ALTM学習のサポートと、実践の中での使用例などの相談役
+
+
+
+\##今後の流れ予測 
+
+\###始めに 
+
+多分最初は順番が大事  
+
+理由は、まとめて全部渡すと、その中の一部しか見てくれない可能性がある  
+
 なので、ここは噛んで含めるように慎重に進める必要がある
 
-▽設計AI
-1.まずは設計AIに、GithubのURLを案内
-2.今あるファイル名を把握して（できればフォルダ構成も書いて）もらう
-→書いてもらうのは、現在のフォルダ構成を把握してもらう目的に加えて、設計AIが正しく把握できているかの確認もかねて
-3.最初はこの引継ぎ計画書を渡す
-4.ここで役割発表
-→この辺から色んな提案が出始めるはずだが、ここは慎重に対応する
-5.要件定義書渡す
-6.テスト計画書、テスト設計を渡す
-→前任の開発AIに若干混乱が見え始めたタイミングで念のため作成した開発スケジュール（途中で更新が止まっている）を見たい場合にはそちらも渡す
-7.状況把握できたか確認を取り、できてたら見たいコードから見せていく
-8.実装状況を把握できたら、この後の開発計画書の作成を要求
-→完成品はQAサポートAIとレビュー
-9.開発計画書が完成したら、どの機能をどのファイルに入れていくか、全体的な設計書の作成を依頼
-→完成品はQAサポートAIとレビュー
-10.全体的な設計書ができたら、機能毎の詳細設計の作成を依頼
-→完成品はQAサポートAIとレビュー
-11.コーディングAIが書いた実装前のコードをレビュー
+
+
+\###設計AI 
+
+1.まずは設計AIに、GithubのURLを案内  
+
+2.今あるファイル名を把握して（できればフォルダ構成も書いて）もらう →書いてもらうのは、現在のフォルダ構成を把握してもらう目的に加えて、設計AIが正しく把握できているかの確認もかねて  
+
+3.最初はこの引継ぎ計画書を渡す  
+
+4.ここで役割発表 →この辺から色んな提案が出始めるはずだが、ここは慎重に対応する  
+
+5.要件定義書渡す  
+
+6.テスト計画書、テスト設計を渡す →前任の開発AIに若干混乱が見え始めたタイミングで念のため作成した開発スケジュール（途中で更新が止まっている）を見たい場合にはそちらも渡す  
+
+7.状況把握できたか確認を取り、できてたら見たいコードから見せていく  
+
+8.実装状況を把握できたら、この後の開発計画書の作成を要求 →完成品はQAサポートAIとレビュー  
+
+9.開発計画書が完成したら、どの機能をどのファイルに入れていくか、全体的な設計書の作成を依頼 →完成品はQAサポートAIとレビュー  
+
+10.全体的な設計書ができたら、機能毎の詳細設計の作成を依頼 →完成品はQAサポートAIとレビュー  
+
+11.コーディングAIが書いた実装前のコードをレビュー  
+
 12.実装後のエラーが出たら、エラーサポートAIの修正案をレビュー
 
-▽コーディングAI
-役割発表（1～4）までは同じ
-5.要件定義書を渡す
-6.現時点での実装済みのファイル、これから実装予定の機能毎の詳細設計、テスト計画書、テスト設計があることを伝え、確認したいファイルと、確認したい順番を確認する
-7.コーディングAIが見たいものを見たい順番に渡す
-8.準備が整ったら、機能毎にコーディングを開始
-→完成品は実装前に設計AIとエラーサポートAIにレビュー依頼する。なおどちらもAIなので、複数観点に効果があるかは不明だが、レビューの役割は分割しておく
-9.問題なければ実装
-10.エラーが出たら、エラーサポートAIの修正案をレビュー
+
+
+\###コーディングAI 
+
+役割発表（1～4）までは同じ  
+
+5.要件定義書を渡す  
+
+6.現時点での実装済みのファイル、これから実装予定の機能毎の詳細設計、テスト計画書、テスト設計があることを伝え、確認したいファイルと、確認したい順番を確認する  
+
+7.コーディングAIが見たいものを見たい順番に渡す  
+
+8.準備が整ったら、機能毎にコーディングを開始 →完成品は実装前に設計AIとエラーサポートAIにレビュー依頼する。なおどちらもAIなので、複数観点に効果があるかは不明だが、レビューの役割は分割しておく  
+
+9.問題なければ実装  
+
+10.エラーが出たら、エラーサポートAIの修正案をレビュー  
+
 11.修正方針が決まったら、方針に沿って修正コードを書く
 
-▽エラーサポートAI
-役割発表（1～4）までは同じ
-5.要件定義書、現時点での実装済みのファイル、これから実装予定の機能毎の詳細設計、テスト計画書、テスト設計があることを伝え、確認したいファイルがあるか、あれば確認したい順番を確認する
-6.エラーサポートAIが見たいものを、必要に応じて見たい順番に渡す
-7.状況が把握出来たら、コーディングAIが書いた実装前のコードをレビュー
-8.実装してエラーが出たら、エラーを解析し、設計AI、コーディングAIの為にエラー内容を簡潔にまとめて、修正方針を提示
+
+
+\###エラーサポートAI 
+
+役割発表（1～4）までは同じ  
+
+5.要件定義書、現時点での実装済みのファイル、これから実装予定の機能毎の詳細設計、テスト計画書、テスト設計があることを伝え、確認したいファイルがあるか、あれば確認したい順番を確認する  
+
+6.エラーサポートAIが見たいものを、必要に応じて見たい順番に渡す  
+
+7.状況が把握出来たら、コーディングAIが書いた実装前のコードをレビュー  
+
+8.実装してエラーが出たら、エラーを解析し、設計AI、コーディングAIの為にエラー内容を簡潔にまとめて、修正方針を提示  
+
 9.修正方針についての設計AI、コーディングAIのレビュー結果で修正方針に手直しが必要な場合、代案を提示
 
 
-##更新履歴
-Ver.1.0：本ファイルを作成
+
+\##更新履歴 Ver.1.0：本ファイルを作成
+
+
 
